Add a fibad top-level method to get the dimensions of downloaded files - Rects in downloadCutout.py now track dimension of the file - Downloader now is a proper object and holds more of its rect   bookkeeping as instance state. - Downloader creation is lightweight, and most work is still in .run() - Example downloader notebook has been updated to use the new interface   to generate histograms of downloaded data.

--- a/example_notebooks/GettingStartedDownloader.ipynb
+++ b/example_notebooks/GettingStartedDownloader.ipynb
@@ -45,10 +45,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fibad_instance = fibad.Fibad(config_file=fibad_config)\n",
+    "import fibad\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# os.chdir(Path(fibad.__file__).parent/\"..\"/\"..\")\n",
+    "fibad_instance = fibad.Fibad(config_file=\"fibad_config.toml\")\n",
     "\n",
     "fibad_instance.download()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "widths, heights = fibad_instance.raw_data_dimensions()\n",
+    "\n",
+    "fig, axs = plt.subplots(1, 2)\n",
+    "fig.set_figwidth(12)\n",
+    "\n",
+    "_, _, _ = axs[0].hist(heights, range=(260, 270), bins=10)\n",
+    "_, _, _ = axs[1].hist(widths, range=(260, 270), bins=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
