Small update to the notebook.

--- a/docs/notebooks/TrainingAModel.ipynb
+++ b/docs/notebooks/TrainingAModel.ipynb
@@ -15,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fibad_instance = fibad.Fibad(config_file=\"../../src/fibad/fibad_default_config.toml\")"
+    "# Create an instance of a fibad object, instantiated (implicitly) with the default configuration file\n",
+    "fibad_instance = fibad.Fibad()"
    ]
   },
   {
@@ -24,9 +25,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Update a few of the configuration parameters\n",
     "fibad_instance.config[\"model\"][\"name\"] = \"ExampleCNN\"\n",
     "fibad_instance.config[\"data_set\"][\"name\"] = \"CifarDataSet\"\n",
-    "fibad_instance.config[\"data_loader\"][\"num_workers\"] = 1"
+    "fibad_instance.config[\"data_loader\"][\"batch_size\"] = 64"
    ]
   },
   {
@@ -35,15 +37,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Begin training the Example CNN model using the CIFAR-10 dataset\n",
     "fibad_instance.train()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
