--- a/docs/notebooks/train_model.ipynb
+++ b/docs/notebooks/train_model.ipynb
@@ -36,7 +36,7 @@
     "fibad_instance.config[\"model\"][\"name\"] = \"ExampleCNN\"\n",
     "fibad_instance.config[\"data_set\"][\"name\"] = \"CifarDataSet\"\n",
     "fibad_instance.config[\"data_loader\"][\"batch_size\"] = 64\n",
-    "fibad_instance.config[\"train\"][\"epochs\"] = 2"
+    "fibad_instance.config[\"train\"][\"epochs\"] = 3"
    ]
   },
   {
@@ -71,6 +71,24 @@
     ">> fibad train --runtime-config ./results/<timestamped_directory>/runtime_config.toml\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%tensorboard --logdir ./results"
+   ]
   }
  ],
  "metadata": {
@@ -89,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
