Adding instructions for users running tensorboard on a server

--- a/docs/notebooks/train_model.ipynb
+++ b/docs/notebooks/train_model.ipynb
@@ -87,8 +87,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%tensorboard --logdir ./results"
+    "%tensorboard --logdir ./results\n",
+    "\n",
+    "# if running on a remote server, and tunnelling a connection,\n",
+    "# pass the --bind-all flag\n",
+    "# %tensorboard --logdir ./results --bind_all\n",
+    "# and then forward the selected port to your local machine"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
