Experimenting with umap-learn

--- a/docs/notebooks/train_model.ipynb
+++ b/docs/notebooks/train_model.ipynb
@@ -354,7 +354,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "found_files = glob.glob(\"/home/drew/code/fibad/docs/notebooks/results/20241216-203830-predict/*.npy\")\n",
+    "\n",
+    "distances = []\n",
+    "file_names = []\n",
+    "latent_spaces = []\n",
+    "\n",
+    "# for each embedding in each output file from inference, calculate a representation of the distance to it's nearest neighbor\n",
+    "for f in found_files:\n",
+    "    latent_spaces.append(np.load(f))\n",
+    "\n",
+    "latent_spaces = np.asarray(np.concatenate(latent_spaces))\n",
+    "latent_spaces.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import umap\n",
+    "\n",
+    "reducer = umap.UMAP()\n",
+    "embedding = reducer.fit_transform(latent_spaces)\n",
+    "embedding.shape\n",
+    "plt.scatter(embedding[:, 0], embedding[:, 1], s=1)"
+   ]
   }
  ],
  "metadata": {
