Updating train_model so that the `.infer` cell does not run until after the user adds the `model_weights_file` path.

--- a/docs/notebooks/train_model.ipynb
+++ b/docs/notebooks/train_model.ipynb
@@ -132,7 +132,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fibad_instance.infer()"
+    "# Uncomment the following line after setting the model_weights_file in the previous cell\n",
+    "\n",
+    "# fibad_instance.infer()"
    ]
   },
   {
