--- a/docs/notebooks/train_model.ipynb
+++ b/docs/notebooks/train_model.ipynb
@@ -73,12 +73,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%load_ext tensorboard"
+    "Fibad automatically records training metrics so that they can be examined using Tensorboard."
    ]
   },
   {
@@ -87,6 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%reload_ext tensorboard\n",
     "%tensorboard --logdir ./results\n",
     "\n",
     "# if running on a remote server, and tunnelling a connection,\n",
@@ -96,11 +95,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once a model has been trained, we can use the model weights file to run inference on. Here we update the configuration in the `fibad_instance` object to specify that we want to use a specific model weights file, and that we want our dataset to be 100% test data.\n",
+    "\n",
+    "If you are running this locally, you'll need to update the path to your local model weights file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Set this to the path of the example.pth file that was created by the call to fibad_instance.train().\n",
+    "# It should be something like `.../results/<timestamp>-train/example_model.pth`.\n",
+    "fibad_instance.config[\"infer\"][\"model_weights_file\"] = \"\"\n",
+    "\n",
+    "fibad_instance.config[\"data_set\"][\"test_size\"] = 1.0\n",
+    "fibad_instance.config[\"data_set\"][\"train_size\"] = 0.0\n",
+    "fibad_instance.config[\"data_set\"][\"validate_size\"] = 0.0\n",
+    "fibad_instance.config[\"data_loader\"][\"batch_size\"] = 128"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following will run inference on the specified dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment the following line after setting the model_weights_file in the previous cell\n",
+    "\n",
+    "# fibad_instance.infer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: Add a cell to plot a confusion matrix."
+   ]
   }
  ],
  "metadata": {
@@ -119,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
