--- a/docs/notebooks/train_model.ipynb
+++ b/docs/notebooks/train_model.ipynb
@@ -92,7 +92,7 @@
     "# you need to pass additional argments for port forwarding to work.\n",
     "# For example\n",
     "# %tensorboard --logdir ./results --bind_all --port 8888\n",
-    "# will start tensorboard on port 8888 and you will need to forward that\n",
+    "# will start tensorboard on port 8888 and you may need to forward that\n",
     "# port to your local machine using\n",
     "# ssh -N -L 8888:<name_of_machine>:8888 <username@server.com>"
    ]
