Moved the demo notebook to the pre_executed folder, making some updates to the markdown in response to feedback.

--- a/docs/pre_executed/mpr_demo.ipynb
+++ b/docs/pre_executed/mpr_demo.ipynb
@@ -4,67 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fibad Demonstration"
+    "# FIBAD Demonstration\n",
+    "\n",
+    "For this demonstration we'll walk through a simplified version of a typical machine learning workflow supported by FIBAD."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Download a sample HSC dataset\n",
-    "\n",
-    "This dataset is comprised of approximately 993 cutouts from the Hyper Suprime Cam survey.\n",
-    "The cutouts were requested to be 8 arcsecs on a side.\n",
-    "For consistency, we crop each image to [96, 96] pixels at runtime.\n",
-    "For each object 3 bands have been acquired, I, R, G.\n",
-    "\n",
-    "Once unzipped there will be a .fits file for each (object id, band) in the `./data/hsc_8asec_1000` directory.\n"
+    "## Download a sample HSC dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "88384.47s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pooch in /home/drew/miniconda3/envs/fibad/lib/python3.12/site-packages (1.8.2)\n",
-      "Requirement already satisfied: platformdirs>=2.5.0 in /home/drew/miniconda3/envs/fibad/lib/python3.12/site-packages (from pooch) (4.3.6)\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/drew/miniconda3/envs/fibad/lib/python3.12/site-packages (from pooch) (24.2)\n",
-      "Requirement already satisfied: requests>=2.19.0 in /home/drew/miniconda3/envs/fibad/lib/python3.12/site-packages (from pooch) (2.32.3)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/drew/miniconda3/envs/fibad/lib/python3.12/site-packages (from requests>=2.19.0->pooch) (3.4.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /home/drew/miniconda3/envs/fibad/lib/python3.12/site-packages (from requests>=2.19.0->pooch) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/drew/miniconda3/envs/fibad/lib/python3.12/site-packages (from requests>=2.19.0->pooch) (2.2.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/drew/miniconda3/envs/fibad/lib/python3.12/site-packages (from requests>=2.19.0->pooch) (2024.8.30)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from 'doi:10.5281/zenodo.14498536/hsc_demo_data.zip' to file '/home/drew/code/fibad/data/example_hsc_new.zip'.\n",
-      "Unzipping contents of '/home/drew/code/fibad/data/example_hsc_new.zip' to '/home/drew/code/fibad/data/.'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/drew/code/fibad/data/./example_hsc.zip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install pooch\n",
     "import pooch\n",
     "\n",
     "file_path = pooch.retrieve(\n",
@@ -72,20 +29,24 @@
     "    url=\"doi:10.5281/zenodo.14498536/hsc_demo_data.zip\",\n",
     "    known_hash=\"md5:1be05a6b49505054de441a7262a09671\",\n",
     "    fname=\"example_hsc_new.zip\",\n",
-    "    path=\"./data\",\n",
+    "    path=\"../../data\",\n",
     "    processor=pooch.Unzip(extract_dir=\".\"),\n",
-    ")\n",
-    "\n",
-    "print(file_path[0])"
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Configuration and Training\n",
-    "\n",
-    "First we import fibad and create a new fibad object, instantiated (implicitly), with the default configuration file."
+    "This dataset is comprised of approximately 993 cutouts from the Hyper Suprime Cam survey.\n",
+    "Each cutout includes i, r and g bands and is 8 arcseconds on a side.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating and configuring a FIBAD object"
    ]
   },
   {
@@ -103,7 +64,6 @@
    ],
    "source": [
     "import fibad\n",
-    "\n",
     "f = fibad.Fibad()"
    ]
   },
@@ -111,9 +71,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this demo, we'll make a few adjustments to the default configuration settings that the `fibad` object was instantiated with. By accessing the `.config` attribute of the fibad instance, we can modify any configuration value. \n",
+    "After importing fibad and create a new fibad object.\n",
     "\n",
-    "Here we specify the location of our sample data, the data set class, the model to train, number of epochs for training and the batch size."
+    "Under the hood the Fibad instance is preparing it's environment, it will:\n",
+    "-  Load the configuration file specified (here it's using the built in default).\n",
+    "-  Parse the configuration file for external libraries and add those to the appropriate registries.\n",
+    "-  Prepare logging for the system."
    ]
   },
   {
@@ -123,7 +86,7 @@
    "outputs": [],
    "source": [
     "# Specify the location of the data to use for training\n",
-    "f.config[\"general\"][\"data_dir\"] = \"./data/hsc_8asec_1000_bu\"\n",
+    "f.config[\"general\"][\"data_dir\"] = \"../../data/hsc_8asec_1000_bu\"\n",
     "\n",
     "# Specify the dataset class that represents the data\n",
     "f.config[\"data_set\"][\"name\"] = \"HSCDataSet\"\n",
@@ -140,7 +103,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We call the `.train()` method to train the model"
+    "The default configuration needs a few tweaks to work for this demo.\n",
+    "We've updated the location of our sample data, and specified which model we want to train.\n",
+    "\n",
+    "The configuration is represented as nested python dictionary. This allows for easy manipulation in a notebook vai the `.config` attribute of the fibad instance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training a model"
    ]
   },
   {
@@ -189,6 +162,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We call the `.train()` method to train the model\n",
+    "\n",
     "The output of the training will be stored in a time-stamped directory under the `./results/`. By default, a copy of the final configuration used in training is persisted as `runtime_config.toml`. To run fibad again with the same configuration, you can reference the runtime_config.toml file.\n",
     "\n",
     "If running in another notebook, instantiate a fibad object like so:\n",
@@ -802,7 +777,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
