Make TensorBoard render, clean up the model in the notebook.

--- a/docs/pre_executed/mpr_demo.ipynb
+++ b/docs/pre_executed/mpr_demo.ipynb
@@ -479,19 +479,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6006 (pid 29208), started 3:30:41 ago. (Use '!kill 29208' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-5e2a68d9acaf5a3c\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-320acb0811df1a40\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-5e2a68d9acaf5a3c\");\n",
-       "          const url = new URL(\"/\", window.location);\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-320acb0811df1a40\");\n",
+       "          const url = new URL(\"http://localhost\");\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
        "            url.port = port;\n",
@@ -528,7 +537,6 @@
    "outputs": [],
    "source": [
     "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
     "from fibad.models.model_registry import fibad_model\n",
     "\n",
     "\n",
@@ -575,17 +583,12 @@
     "        z = self._eval_encoder(x)\n",
     "        x_hat = self._eval_decoder(z)\n",
     "\n",
-    "        # Here, the loss function is defined in the config\n",
     "        loss = self.criterion(x, x_hat)\n",
     "        loss = loss.sum(dim=[1, 2, 3]).mean(dim=[0])\n",
     "        self.optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        self.optimizer.step()\n",
-    "        return {\"loss\": loss.item()}\n",
-    "\n",
-    "    # # The optimizer can be coded directly, or defined in the configuration file\n",
-    "    # def _optimizer(self):\n",
-    "    #     return optim.Adam(self.parameters(), lr=1e-3)"
+    "        return {\"loss\": loss.item()}"
    ]
   },
   {
