Demo notebook prep (#180)
* Checkpointing experimentation for the demo.

* Being more explicit with the import of importlib.util. (#181)

* Being more explicit with the import of importlib.util.

* Importing importlib.util in the one other place it is used.

* Adding MPR demo notebook.

* Skipping pre-commit hooks so I do not lose output.

* Skipping pre-commit hooks so I do not lose output. Updated final displays to be single band lognorm normalized.

* Moved the demo notebook to the pre_executed folder, making some updates to the markdown in response to feedback.

* Checkpoint commit - cleaning up wording in markdown cells. Moved plotting code out. Added TQDM for train engine.

* Make TensorBoard render, clean up the model in the notebook.

* Final pass through text before peer review. Displaying first and last 16 median distance objects instead of making a cut.

* Removing unused `train_model.ipynb` cells.

--- a/docs/notebooks/train_model.ipynb
+++ b/docs/notebooks/train_model.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "import fibad\n",
     "\n",
-    "fibad_instance = fibad.Fibad()"
+    "fibad_instance = fibad.Fibad(config_file=\"./train_model_config.toml\")"
    ]
   },
   {
@@ -33,10 +33,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fibad_instance.config[\"model\"][\"name\"] = \"ExampleCNN\"\n",
-    "fibad_instance.config[\"data_set\"][\"name\"] = \"CifarDataSet\"\n",
-    "fibad_instance.config[\"data_loader\"][\"batch_size\"] = 64\n",
-    "fibad_instance.config[\"train\"][\"epochs\"] = 2"
+    "fibad_instance.config[\"model\"][\"name\"] = \"ExampleAutoencoder\"\n",
+    "fibad_instance.config[\"data_set\"][\"name\"] = \"HSCDataSet\"\n",
+    "fibad_instance.config[\"train\"][\"epochs\"] = 20"
    ]
   },
   {
@@ -112,10 +111,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set this to the path of the example.pth file that was created by the call to fibad_instance.train().\n",
-    "# It should be something like `.../results/<timestamp>-train/example_model.pth`.\n",
-    "fibad_instance.config[\"infer\"][\"model_weights_file\"] = \"\"\n",
-    "\n",
     "fibad_instance.config[\"data_set\"][\"test_size\"] = 1.0\n",
     "fibad_instance.config[\"data_set\"][\"train_size\"] = 0.0\n",
     "fibad_instance.config[\"data_set\"][\"validate_size\"] = 0.0\n",
@@ -135,9 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Uncomment the following line after setting the model_weights_file in the previous cell\n",
-    "\n",
-    "# fibad_instance.infer()"
+    "fibad_instance.infer()"
    ]
   },
   {
