Visualize verb implementing Holoviews scatter plot and table - Holoviews scatter plot of umapped data - Tabular view of points including data set object id - Datashader + Holoviews used with a kd-tree to render large   datasets quickly - Selection tools (lasso, box, tap) in the latent space view   populate the table view

--- a/example_notebooks/HoloviewPrototype.ipynb
+++ b/example_notebooks/HoloviewPrototype.ipynb
@@ -309,7 +309,7 @@
    "outputs": [],
    "source": [
     "# no tree\n",
-    "tree = df"
+    "# tree = df"
    ]
   },
   {
@@ -319,7 +319,7 @@
    "outputs": [],
    "source": [
     "# kdtree (fastest)\n",
-    "# tree = KDTree(df)"
+    "tree = KDTree(df)"
    ]
   },
   {
