Cleaning up the `train_model.ipynb` file so that it can be used for documentation.

--- a/docs/notebooks/train_model.ipynb
+++ b/docs/notebooks/train_model.ipynb
@@ -4,9 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Intro to Training and Configurations\n",
+    "# FIBAD Getting Started\n",
     "\n",
-    "First we import fibad and create a new fibad object, instantiated (implicitly), with the default configuration file."
+    "In this getting started notebook we'll create an instance of a FIBAD object, train a builtin model on the CiFAR training dataset, and then use that trained model to run inference on the CiFAR testing dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a FIBAD instance"
    ]
   },
   {
@@ -17,14 +24,14 @@
    "source": [
     "import fibad\n",
     "\n",
-    "fibad_instance = fibad.Fibad(config_file=\"./train_model_config.toml\")"
+    "f = fibad.Fibad()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this demo, we'll make a few adjustments to the default configuration settings that the `fibad` object was instantiated with. By accessing the `.config` attribute of the fibad instance, we can modify any configuration value. Here we change which built in model to use, the dataset, batch size, number of epochs for training."
+    "## Update the configuration"
    ]
   },
   {
@@ -33,16 +40,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fibad_instance.config[\"model\"][\"name\"] = \"ExampleAutoencoder\"\n",
-    "fibad_instance.config[\"data_set\"][\"name\"] = \"HSCDataSet\"\n",
-    "fibad_instance.config[\"train\"][\"epochs\"] = 20"
+    "f.config[\"model\"][\"name\"] = \"ExampleAutoencoder\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We call the `.train()` method to train the model"
+    "For this demo, we'll make a few adjustments to the default configuration settings that the `fibad` object was instantiated with.\n",
+    "By accessing the `.config` attribute of the fibad instance, we can modify any configuration value.\n",
+    "There are many configuration values that can be set, but here, we update only the model to train."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train a model"
    ]
   },
   {
@@ -51,14 +65,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fibad_instance.train()"
+    "f.train()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The output of the training will be stored in a time-stamped directory under the `./results/`. By default, a copy of the final configuration used in training is persisted as `runtime_config.toml`. To run fibad again with the same configuration, you can reference the runtime_config.toml file.\n",
+    "The output of the training will be stored in a time-stamped directory under the `./results/`.\n",
+    "By default, a copy of the final configuration used in training is persisted as `runtime_config.toml`.\n",
+    "To run fibad again with the same configuration, you can reference this runtime_config.toml file.\n",
     "\n",
     "If running in another notebook, instantiate a fibad object like so:\n",
     "```\n",
@@ -68,76 +84,47 @@
     "Or from the command line:\n",
     "```\n",
     ">> fibad train --runtime-config ./results/<timestamped_directory>/runtime_config.toml\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Fibad automatically records training metrics so that they can be examined using Tensorboard."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%reload_ext tensorboard\n",
-    "%tensorboard --logdir ./results\n",
+    "```\n",
     "\n",
-    "# If you are running on a remote server and want to run tensorboard there;\n",
-    "# you need to pass additional argments for port forwarding to work.\n",
-    "# For example\n",
-    "# %tensorboard --logdir ./results --bind_all --port 8888\n",
-    "# will start tensorboard on port 8888 and you may need to forward that\n",
-    "# port to your local machine using\n",
-    "# ssh -N -L 8888:<name_of_machine>:8888 <username@server.com>"
+    "Note here we're training on only a small handful of CiFAR data, but FIBAD has demonstrated that it can scale up to training sets with >1M samples."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once a model has been trained, we can use the model weights file to run inference on. Here we update the configuration in the `fibad_instance` object to specify that we want to use a specific model weights file, and that we want our dataset to be 100% test data.\n",
+    "## Run inference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f.config[\"data_set\"][\"test_size\"] = 1.0\n",
+    "f.config[\"data_set\"][\"train_size\"] = 0.0\n",
+    "f.config[\"data_set\"][\"validate_size\"] = 0.0\n",
+    "f.config[\"data_loader\"][\"batch_size\"] = 128\n",
     "\n",
-    "If you are running this locally, you'll need to update the path to your local model weights file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fibad_instance.config[\"data_set\"][\"test_size\"] = 1.0\n",
-    "fibad_instance.config[\"data_set\"][\"train_size\"] = 0.0\n",
-    "fibad_instance.config[\"data_set\"][\"validate_size\"] = 0.0\n",
-    "fibad_instance.config[\"data_loader\"][\"batch_size\"] = 128"
+    "f.infer()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following will run inference on the specified dataset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fibad_instance.infer()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TODO: Add a cell to plot a confusion matrix."
+    "Once a model has been trained, we can use the model weights file to run inference.\n",
+    "By default running `infer` will look for the latest available model weights file.\n",
+    "A specific model weights file can be specified with `f.config['infer']['model_weights_file'] = <path_to_model_weights_file>`.\n",
+    "\n",
+    "Here we'll make use of the last trained model weights file, and update the data set splits so that 100% of the data will be used for inference.\n",
+    "\n",
+    "With the configuration updated, we can run inference by calling `f.infer()`.\n",
+    "\n",
+    "The results of running inference are saved in the output directory noted in the last log line.\n",
+    "The default output format is batched .npy files.\n",
+    "Additionally a ChromaDB vector database will be populated with the inference results to enable efficient similarity search."
    ]
   }
  ],
