First implementation of cache warming for HSCDataSet

--- a/docs/pre_executed/mpr_demo.ipynb
+++ b/docs/pre_executed/mpr_demo.ipynb
@@ -98,12 +98,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Specify the location of the data to use for training\n",
-    "f.config[\"general\"][\"data_dir\"] = \"../../data/hsc_8asec_1000_bu\"\n",
+    "f.config[\"general\"][\"data_dir\"] = \"../../data/hsc_8asec_1000\"\n",
     "\n",
     "# Specify the dataset class that represents the data\n",
     "f.config[\"data_set\"][\"name\"] = \"HSCDataSet\"\n",
